--- a/parts/cover.tex
+++ b/parts/cover.tex
@@ -14,23 +14,23 @@
   \vspace{0.5cm}  
   {\scshape\large Escuela de Química \par}
   \vspace{1cm}
-  {\scshape\huge Laboratorio X}\par
+  {\scshape\huge Laboratorio 6}\par
   \vspace{0.5cm}
-  {\scshape\large XXXX \par}
-  {\scshape\normalsize Sección: X \hspace{12pt} Día: \today \par}
-  {\scshape\large Número de Práctica: X \par}
+  {\scshape\large Cinética Química \par}
+  {\scshape\normalsize Sección: D \hspace{12pt} Día: \today \par}
+  {\scshape\large Número de Práctica: 6 \par}
   \vspace{1cm}
   \begin{tabular*}{\textwidth}{l @{\extracolsep{\fill}} r}
     \textbf{Integrantes:} & \vspace{6pt} \\
-    XXXX & 20XXXX \\
-    XXXX & 20XXXX \\
+    Castillo Solorzano, Piero David & 20230114B \\
+    Távara Romani, Víctor Gabriel & 20230135J \\
     & \\
     \textbf{Docentes:} & \vspace{6pt} \\
-    & XXXX \\
-    & XXXX
+    & Dávila Ingaruca, Marcelino Eusabio \\
+    & Sayán Rivera, Rosa María Elizabeth 
   \end{tabular*}
   \par\vspace{1cm}
-  {\itshape 20XX-X}
+  {\itshape 2023-I}
   \vspace*{\fill}
 \end{titlepage}
 \end{document}
