--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,7 @@
 \usepackage{subcaption}
 \usepackage{adjustbox}
 \usepackage{array}
+\usepackage{multirow}
 
 % external imports
 \usepackage{graphicx}
