--- a/parts/tablesAndObservations.tex
+++ b/parts/tablesAndObservations.tex
@@ -1,7 +1,49 @@
-\documentclass[,,/main,tex]{subfiles}
-
-\usepackage{multirow}
+\documentclass[../main.tex]{subfiles}
 
 \begin{document}
+\subsection{Observaciones}
+\begin{itemize}
+    \item En el experimento #3 la solución se tornó de color amarillo ocre en 4.10 segundos,
+    luego cambió a azul claro en 5.5 segundos y finalmente se tornó totalmente 
+    en azul oscuro en 6 segundos. 
+\end{itemize}
+
+\subsection{Tablas de Datos}
+\begin{table}[H]
+    \centering
+    \begin{tabular}{c|c}
+        \hline
+        Ensayo & $\Delta t$ (s)\\
+        \hline
+        #1     & 16.60\\
+        #2     & 16.01\\
+        #3     & 60.23\\
+        \hline
+    \end{tabular}
+    \caption{Datos experimentales del Experimento 1}
+\end{table}
+\begin{table}[H]
+    \centering
+    \begin{tabular}{c|c}
+        \hline
+        Ensayo & $\Delta t$ (s)\\
+        \hline
+        #3     & 5.5\\
+        \hline
+    \end{tabular}
+    \caption{Datos experimentales del Experimento 2}
+\end{table}
+\begin{table}[H]
+    \centering
+    \begin{tabular}{c|c|c|c}
+        \hline
+        Ensayo        & #1 ($H_2O$) & #2 ($AgNO_3$) & #3 ($Cu(NO_3)_2$) \\
+        \hline
+        $\Delta t$ (s)& 70.18       & 84.81         & 5.10\\
+        \hline
+    \end{tabular}
+    \caption{Datos experimentales del Experimento 3}
+\end{table}
+
 
 \end{document}
