add introduction and objetives

--- a/parts/introduction.tex
+++ b/parts/introduction.tex
@@ -1,5 +1,10 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-
+En el presente experimento de cinética química, se busca determinar el 
+orden de reacción entre el ion yoduro $(I^-)$ y el ion peroxodisulfato 
+$(S_2O_8^{2-})$ mediante el método de las velocidades iniciales.  
+Además, se busca calcular la constante de velocidad de esta reacción en particular. 
+Para lograrlo, se realizarán mediciones experimentales de la velocidad de reacción 
+variando las concentraciones de los reactivos.
 \end{document}
