--- a/parts/objectives.tex
+++ b/parts/objectives.tex
@@ -1,5 +1,10 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-
+\begin{itemize}
+    \item Determinar el orden de la reacción del ion yoduro $(I^-)$ con el ion 
+    peroxodisulfato con respecto a cada reactivo por el método de las velocidades 
+    iniciales.
+    \item Determinar la constante de velocidad de la reacción estudiada.
+\end{itemize}
 \end{document}
