--- a/main.tex
+++ b/main.tex
@@ -45,7 +45,7 @@
 \clearpage
 
 \section{Introducción}
-\subsection{parts/introduction}
+\subfile{parts/introduction}
 
 \section{Objetivos}
 \subfile{parts/objectives}
