--- a/main.tex
+++ b/main.tex
@@ -44,10 +44,10 @@
 \tableofcontents
 \clearpage
 
-\section{Introducción}
+\section{Introducción} %done
 \subfile{parts/introduction}
 
-\section{Objetivos}
+\section{Objetivos} %done 
 \subfile{parts/objectives}
 
 \section{Fundamento Teórico}
@@ -56,7 +56,7 @@
 \section{Procedimiento Experimental}
 \subfile{parts/procedures}
 
-\section{Observaciones Experimentales y/o Datos tabulados}
+\section{Observaciones Experimentales y/o Datos tabulados} % done
 \subfile{parts/tablesAndObservations}
 
 \section{Cálculos, Reacciones químicas y/o Resultados tabulados}
