--- a/parts/fundaments.tex
+++ b/parts/fundaments.tex
@@ -2,4 +2,46 @@
 
 \begin{document}
 
+\subsection{Cinética Química}
+Es un área que se encarga del estudio de la rapidez con que ocurre una reacción 
+química. Cinética hace referencia al cambio en la concentración de un reactivo o 
+de un producto con respecto del tiempo.
+\subsection{Ley de la Rapidez} 
+La rapidez de una reacción es proporcional a la 
+concentración de reactivos y la constante de proporcionalidad "k" recibe el 
+nombre de constante de rapidez. Esta ley expresa la relación de la rapidez de 
+una reacción gracias a la constante de rapidez y la concentración de los 
+reactivos, elevados a alguna potencia. 
+Tenemos así:
+\begin{equation} \nonumber
+    a\,A + b\,B \rightarrow c\,C + d\,D
+\end{equation}
+Entonces la ley de rapidez tendrá la forma:
+\begin{equation} \label{velocity_eq}
+    V = k\cdot[A]^x[B]^y
+\end{equation}
+
+Los exponentes $ x $ y $ y $ especifican las relaciones entre las concentraciones 
+de los reactivos A y B además de la rapidez de la reacción. Al sumar estos 
+exponentes, obtenemos el orden de reacción global, que se define como la suma 
+de los exponentes a los que se elevan todas las concentraciones de reactivos que 
+aparecen en la ley de rapidez que escribimos anteriormente. El orden de una 
+reacción siempre se define en términos de las concentraciones de los reactivos 
+(no de los productos).
+
+Las leyes de la rapidez siempre se determinan en forma experimental. A partir 
+de las concentraciones de los reactivos como notamos en la ecuación \ref{velocity_eq}, 
+además de la rapidez inicial es posible determinar el orden de una reacción y, 
+por tanto, la constante de rapidez de la reacción.
+\subsection{Técnicas con Yodo}
+\subsubsection{Yodometría} Es un método indirecto en que los oxidantes se determinan 
+haciéndolos reaccionar con un exceso de yoduro; el yodo liberado se valora en 
+disolución débilmente ácida con un reductor patrón.\\
+Los reactivos generalmente son tiosulfato del sodio como el titulante, el almidón 
+como indicador que forma el complejo azulado con las moléculas del yodo, y 
+un compuesto del yodo.
+\subsubsection{Yodimetría} A diferencia de la yodometría, la yodimetría es un método 
+directo en el que se utiliza una disolución modelo o patrón de yodo para valorar 
+reductores fuertes, normalmente en disolución neutra o débilmente acidas.
+
 \end{document}
