--- a/main.tex
+++ b/main.tex
@@ -50,7 +50,7 @@
 \section{Objetivos} %done 
 \subfile{parts/objectives}
 
-\section{Fundamento Teórico}
+\section{Fundamento Teórico} %done
 \subfile{parts/fundaments}
 
 \section{Procedimiento Experimental}
