--- a/parts/procedures.tex
+++ b/parts/procedures.tex
@@ -2,4 +2,34 @@
 
 \begin{document}
 
+    \subsection{Experimento 1: Determinación del orden de la reacción.}
+    \begin{enumerate}
+    \item Se ubican los 6 tubos de ensayo vacíos que se pueden identificar con un numero y una letra (1A, 2A, 3A, 1B, 2B y 3B).
+    \item A continuación se colocará cierta cantidad de militros de $K_2$$S_2$$O_8$ 1 M a cada tubo de ensayo con la letra A (2.5 mL al tubo con la etiqueta 1A, 2.5 mL al tubo de etiqueta 2A y 1.5 mL al tubo de etiqueta 3A).
+    \item Después, se colocará 5 mL del indicador (almidón 2\%) más tiosulfato de sodio 0.0001 M  a cada tubo de ensayo con la letra B.
+    \item  Luego, agregue cierta cantidad de mililitro de $KI$ 0,1 M y agua acada tubo de ensayo B (2.5 mL de $KI$ 0,1 M y 0.0 mL de $H_2O$  al tubo con la etiqueda 1B,  2.0 mL de $KI$ 0,1 M y 0.5 mL de $H_2O$  al tubo con la etiqueda 2B y 2.0 mL de $KI$ 0,1 M y 1.0 mL de $H_2O$  al tubo con la etiqueda 3B).
+    \item Posteriormente, se juntará las soluciones de los tubos con el mismo número (1A con 1B, 2A con 2B y 3A con 3B) y se tomará el tiempo en el hasta que la mezcla se torne de color azul.
+    \item Por consiguiente, se anota el tiempo cronometrado entre cada tubo de ensayo con el mismo número.
+    \item Seguidamente, se halla la velocidad de reacción de cada mezcla y se iguala con la formula: $V=k\cdot[I^{-}]^{m}[S_2O_8^{2-}]^{n}$ para hallar los valores de m y n.
+    \item Finalmente, la suma de m y n nos da el orden de la reacción.
+    \end{enumerate}
+
+    \subsection{Experimento 2: Efecto de la temperatura sobre la velocidad.}
+    \begin{enumerate}
+    \item Del experimento N°1, se escoje la mezcla con la menor velocidad de reacción.
+    \item Depués, se repite el experimento anterior, pero antes de juntar las soluciones de ambos tubos de ensayo, se deja calentar en bañomaría por 5 minutos.
+    \item Luego, se toma el tiempo en el que la mezcla se torna de color azul con un cronómetro y luego se halla la velocidad de reacción.
+    \item Finalmente, se comparar con la velocidad obtenida en el primer experimento y observar si hay variaciones.
+    \end{enumerate}
+
+    \subsection{Experimento 3: Efecto de los catalizadores sobre la velocidad de reacción.}
+    \begin{enumerate}
+    \item Del experimento N°1, se escoje la mezcla que haya tenido el menor valor de velocidad de reacción y se prepara en 3 tubos de ensayo  $K_2$$S_2$$O_8$ con la misma concentración (los tubos se etiquetarán con las letras A, B y C para distinguirlos).  
+    \item En el tubo A, se le agrega una gota de nitrato de cobre 1 M.
+    \item En el tubo B, se le agrega una gota de nitrato de plata 1 M.
+    \item En el tubo C, se le agrega una gota de agua.
+    \item Luego, se mezcla $KI$ más almidón más tiosulfato más agua como en el experimento N°1.
+    \item Después, se toma el tiempo de reacción de cada una de las mezclas con sus respectivos catalizadores y ver si producieron algún efecto en la velocidad de la reacción.
+    \end{enumerate}
+
 \end{document}
