--- a/main.tex
+++ b/main.tex
@@ -32,6 +32,22 @@
 \usepackage[style=authoryear]{biblatex}
 \addbibresource{resources/references.bib}
 
+%graphics
+\usepackage{tikz}
+\usetikzlibrary{positioning, shapes, shadows}
+\usepackage{xcolor}
+\usepackage{tcolorbox}
+\usepackage{colortbl}
+\definecolor{celeste}{HTML}{38e1f2}
+\definecolor{celesteOscuro}{HTML}{1aa8b6}
+\definecolor{naranja}{HTML}{ffd764}
+\definecolor{naranjaOscuro}{HTML}{c4a037}
+\definecolor{amarillo}{HTML}{8fff1f}
+\definecolor{amarilloOscuro}{HTML}{6bd501}
+\definecolor{azul}{HTML}{6490f6}
+\definecolor{azulOscuro}{HTML}{3959a2}
+
+
 \begin{document}
 \subfile{parts/cover}
 
