--- a/parts/conclusion.tex
+++ b/parts/conclusion.tex
@@ -1,5 +1,9 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-
+\begin{itemize}
+    \item En el experimento N°1, se logro encontrar el orden de la reacción que es 3 a base de los experimentos del día de laboratorio.
+    \item En el experimento N°2, se observa que el aumento de temperatura favorece a la rección porque se demora menos tiempo en reaccionar.
+    \item En el experimento N°3, se observa que la gota de agua no aporta a la reacción, hasta pareciera que se demorara más tiempo en reaccionar, se observa que el nitrato de plata perjudica a la reacción porque se demora mucho más tiempo y es notorio, y por ultimo, el nitrato de cobre favorece considerablemente a la reacción reduciendo a casi 12 veces el tiempo en que se demoro en reaccionar la mezcla.
+\end{itemize}
 \end{document}
