--- a/parts/discussion.tex
+++ b/parts/discussion.tex
@@ -1,5 +1,9 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-
+\begin{itemize}
+    \item Se logro determinar el orden la reacción del primer experimento, pero con un ligero error al tratarse de pruebas experimentales.
+    \item Se observa en el segundo experimento que el aumento de temperatura genero que la reacción se demore de 60.23s a 5.5s
+    \item En le experimento tres se observa que en el tubo de ensayo con el número 1 se demora un poco más que en el primer experimento (60.23 s a 70.18 s), en el tubo de ensayo número 2 se demora más en el primer experimento (60.23s a 84.81s)  y en el tubo de ensayo número 3 se demora considerablemente menos a comparación del primer experimento (60.23s a 5.10s).
+\end{itemize}
 \end{document}
