--- a/parts/procedures.tex
+++ b/parts/procedures.tex
@@ -11,7 +11,7 @@
     \item Posteriormente, se juntará las soluciones de los tubos con el mismo número (1A con 1B, 2A con 2B y 3A con 3B) y se tomará el tiempo en el hasta que la mezcla se torne de color azul.
     \item Por consiguiente, se anota el tiempo cronometrado entre cada tubo de ensayo con el mismo número.
     \item Seguidamente, se halla la velocidad de reacción de cada mezcla y se iguala con la formula: $V=k\cdot[I^{-}]^m\cdot[S_2O_8^{2-}]^n$ para hallar los valores de m y n.
-    \item Finalmente, la suma de $m$ y $n$ nos da el orden de la reacción.
+    \item Finalmente, la suma de $m$ y $n$ nos da el orden de la reacción.\cite{lab}
     \end{enumerate}
 
     \begin{figure}[H]
@@ -40,7 +40,7 @@
         \end{tikzpicture}        
         \end{center}
         \label{fig:proc_1}
-        \caption{Diagrama de flujo resumen del experimento 1 \cite{lab}}
+        \caption{Diagrama de flujo resumen del experimento 1}
     \end{figure}
 
     \subsection{Experimento 2: Efecto de la temperatura sobre la velocidad.}
@@ -48,7 +48,7 @@
     \item Del experimento N°1, se escoje la mezcla con la menor velocidad de reacción.
     \item Depués, se repite el experimento anterior, pero antes de juntar las soluciones de ambos tubos de ensayo, se deja calentar en bañomaría por 5 minutos.
     \item Luego, se toma el tiempo en el que la mezcla se torna de color azul con un cronómetro y luego se halla la velocidad de reacción.
-    \item Finalmente, se comparar con la velocidad obtenida en el primer experimento y observar si hay variaciones.
+    \item Finalmente, se comparar con la velocidad obtenida en el primer experimento y observar si hay variaciones.\cite{lab}
     \end{enumerate}
 
     
@@ -78,7 +78,7 @@
         \end{tikzpicture}        
         \end{center}
         \label{fig:proc_2}
-        \caption{Diagrama de flujo resumen del experimento 2 \cite{lab}}
+        \caption{Diagrama de flujo resumen del experimento 2}
     \end{figure}
 
     \subsection{Experimento 3: Efecto de los catalizadores sobre la velocidad de reacción.}
@@ -88,7 +88,7 @@
     \item En el tubo B, se le agrega una gota de nitrato de plata 1 M.
     \item En el tubo C, se le agrega una gota de agua.
     \item Luego, se mezcla $KI$ más almidón más tiosulfato más agua como en el experimento N°1.
-    \item Después, se toma el tiempo de reacción de cada una de las mezclas con sus respectivos catalizadores y ver si producieron algún efecto en la velocidad de la reacción.
+    \item Después, se toma el tiempo de reacción de cada una de las mezclas con sus respectivos catalizadores y ver si producieron algún efecto en la velocidad de la reacción. \cite{lab}
     \end{enumerate}
 
     
@@ -110,7 +110,7 @@
 
         \node (cuadro4) [naranja, below = 0.9cm of cuadro3] {Iniciar la reacción.};
     
-        \node (cuadro5) [naranja, below = 0.9cm of cuadro3] {Anotar los datos medidos del experimento.};
+        \node (cuadro5) [naranja, below = 0.9cm of cuadro4] {Anotar los datos medidos del experimento.};
     
         \draw[linea] (titulo.south) |- (cuadro1.north);
         \draw[linea] (cuadro1.south) |- (cuadro2.north);
@@ -121,7 +121,7 @@
         \end{tikzpicture}        
         \end{center}
         \label{fig:proc_3}
-        \caption{Diagrama de flujo resumen del experimento 3 \cite{lab}}
+        \caption{Diagrama de flujo resumen del experimento 3}
     \end{figure}
 
 \end{document}
