--- a/parts/results.tex
+++ b/parts/results.tex
@@ -2,4 +2,81 @@
 
 \begin{document}
 
+\subsection{Experimento N°1}
+\begin{enumerate}
+    \item Primer paso, hay que calcular la concentración de $[S_2O_3^{2-}]$ en cada uno de los tubos de ensayo con la letra B.\\
+Para 1B: 
+\[[S_2O_3^{2-}]=(0.0001M) \cdot \frac{5mL}{(2.5+2.5+5+0.0)mL} =(0.0001M) \cdot \frac{5mL}{10mL}=0.00005 M\]
+Para 2B:
+\[[S_2O_3^{2-}]=(0.0001M) \cdot \frac{5mL}{(2.5+2.0+5+0.5)mL} =(0.0001M) \cdot \frac{5mL}{10mL}=0.00005 M\]
+Para 3B: 
+\[[S_2O_3^{2-}]=(0.0001M) \cdot \frac{5mL}{(1.5+2.0+5+1.5)mL} =(0.0001M) \cdot \frac{5mL}{10mL}=0.00005 M\]
+
+\item Segundo paso, calcular la velocidad de desaparición de $S_2O_3^{2-}$.\\
+\\ Para  1A y 1B: 
+\[V_{desaparici\acute{o}n1}=\frac{[S_2O_3^{2-}]_1}{t_1}=\frac{0.00005M}{16.60s}=30.1205 \cdot 10^{-7} \frac{M}{s}\]
+\\ Para 2A y 2B:  
+\[V_{desaparici\acute{o}n2}=\frac{[S_2O_3^{2-}]_2}{t_2}=\frac{0.00005M}{16.01s}=31.2305 \cdot 10^{-7} \frac{M}{s}\]
+\\ Para 3A y 3B:  
+\[V_{desaparici\acute{o}n3}=\frac{[S_2O_3^{2-}]_3}{t_3}=\frac{0.00005M}{60.23s}=8.3015 \cdot 10^{-7} \frac{M}{s}\]
+
+\item Tercer paso, calcular la velocidad de aparición de $[I^{-}]$.\\
+\\Para la mezcla 1A y 1B: 
+\[V_{aparici\acute{o}n1}=\frac{V_{desaparici\acute{o}n1}}{2}=15.06025 \cdot 10^{-7} \frac{M}{s}\]
+\\Para la mezcla 2A y 2B: 
+\[V_{aparici\acute{o}n2}=\frac{V_{desaparici\acute{o}n2}}{2}=15.61525 \cdot 10^{-7} \frac{M}{s}\]
+\\Para la mezcla 3A y 3B: 
+\[V_{aparici\acute{o}n3}=\frac{V_{desaparici\acute{o}n3}}{2}=4.15075 \cdot 10^{-7} \frac{M}{s}\]
+
+\item Cuarto paso, calcular el $[I^{-}]$ adicionado.\\
+\\Para la mezcla 1A y 1B:  
+\[[I^{-}]_{adicionado1}=(0.1M) \cdot \frac{2.5mL}{10mL}=0.025M\]
+\\Para la mezcla 2A y 2B:  
+\[[I^{-}]_{adicionado2}=(0.1M) \cdot \frac{2.0mL}{10mL}=0.020M\]
+\\Para la mezcla 3A y 3B:  
+\[[I^{-}]_{adicionado3}=(0.1M) \cdot \frac{2.0mL}{10mL}=0.020M\]
+\item Quinto paso, calcular el $[S_2O_8^{2-}]$ adicionado.\\
+\\Para la mezcla 1A y 1B:  
+\[[S_2O_8^{2-}]_{adicionado1}=(0.1M) \cdot \frac{2.5mL}{10mL}=0.025M\]
+\\Para la mezcla 2A y 2B:  
+\[[S_2O_8^{2-}]_{adicionado2}=(0.1M) \cdot \frac{2.5mL}{10mL}=0.025M\]
+\\Para la mezcla 3A y 3B:  
+\[[S_2O_8^{2-}]_{adicionado3}=(0.1M) \cdot \frac{1.5mL}{10mL}=0.015M\]
+\item Sexto paso, completamos la tabla en la pag 35.\\
+\\\begin{tabular}{c|c|c|c}
+\hline
+ &Ensayo 1Ay1B&Ensayo 2Ay2B&Ensayo 3Ay3B\\ \hline
+$[S_2O_3^{2-}]$ & $0.00005 M$ &$0.00005 M$&$0.00005 M$\\\hline
+$V_{desaparici\acute{o}n} de S_2O_3^{2-}$&$30.1205 \cdot 10^{-7} M/s$&$31.2305 \cdot 10^{-7} M/s$&$8.3015 \cdot 10^{-7} M/s$\\\hline
+$V_{aparici\acute{o}n} de I^{-}$ &$15.06025 \cdot 10^{-7} M/s$&$15.61525 \cdot 10^{-7} M/s$&$4.15075 \cdot 10^{-7} M/s$\\ \hline
+$[I^{-}]$ &$0.025M$&$0.020M$&$0.020M$\\ \hline
+$[S_2O_8^{2-}]$ &$0.025M$&$0.025M$&$0.015M$\\ \hline
+Volumen &$10 mL$&$10 mL$&$10 mL$\\ \hline
+\end{tabular}
+\\
+\item Septimo paso, usar la fórmula de la velocidad en función de las concentraciones.\\
+\[V_{aparici\acute{o}n} de I^{-}=k[I^{-}]^{m}[S_2O_8^{2-}]^{n} \]
+Para 1A y 1B: 
+\begin{equation}   \label{eq_calc_1}
+    15.06025\cdot10^{-7} M/s=k\cdot(0.025M)^{m}\cdot(0.025M)^{n}
+\end{equation}
+Para 2A y 2B:
+\begin{equation}   \label{eq_calc_2}
+    15.61525\cdot10^{-7} M/s=k\cdot(0.020M)^{m}\cdot(0.025M)^{n}
+\end{equation}
+Para 3A y 3B: 
+\begin{equation}   \label{eq_calc_3}
+    4.15075\cdot10^{-7} M/s=k\cdot(0.020M)^{m}\cdot(0.015M)^{n}
+\end{equation}
+Dividiendo \ref{eq_calc_1} entre \ref{eq_calc_3}:\\
+\[0.96446=(1.25)^{m}\]
+\[ m \approx -0.16216\]
+Dividiendo \ref{eq_calc_2} entre \ref{eq_calc_3}:\\
+\[3.76203=(5/3)^{n}\]
+\[n \approx 2.59376\]
+\item Octavo paso, para determinar el orden de la reacción se debe sumar n+m:
+\[n+m=-0.16216+2.59376=2.4316\]
+El orden de la reacción es 2.4316.
+\end{enumerate}
+
 \end{document}
