--- a/parts/fundaments.tex
+++ b/parts/fundaments.tex
@@ -5,7 +5,7 @@
 \subsection{Cinética Química}
 Es un área que se encarga del estudio de la rapidez con que ocurre una reacción 
 química. Cinética hace referencia al cambio en la concentración de un reactivo o 
-de un producto con respecto del tiempo.
+de un producto con respecto del tiempo.\cite{chang}
 \subsection{Ley de la Rapidez} 
 La rapidez de una reacción es proporcional a la 
 concentración de reactivos y la constante de proporcionalidad "k" recibe el 
