--- a/resources/references.bib
+++ b/resources/references.bib
@@ -8,7 +8,7 @@
   author =      "Raymond Chang y Jason Overby",
   title =       "QUÍMICA 13a Edición",
   year =        "2021",
-  adress =      "Editorial Mc Graw Hill"
+  publisher =   "Editorial Mc Graw Hill"
 }
 @book{esteq,
   author =      "Victoria Calzada",
@@ -18,6 +18,5 @@
 @book{lab,
   author =      "Universidad Nacional de Ingeniería, Facultad de Ciencias, Escuela de Química (2022)",
   title =       "QUÍMICA I, MANUAL DE LABORATORIO. Estequiometría",
-  year =        "2023",
-  adress =      "Lima, Perú"
+  year =        "2023"
 }
